src/test/ui/nll/user-annotations/cast_static_lifetime.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/cast_static_lifetime.rs:16:19
   |
LL |     let y: &u32 = (&x) as &'static u32;
   |                   ^^^^ borrowed value does not live long enough
LL | }
   | - `x` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
